[tool.poetry]
name = "rlad-bst"
version = "0.1.0"
description = ""
authors = ["Ennio Strohauer <ennio.strohauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
gymnasium = "^1.0.0"
numpy = "^2.1.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 79
