[tool.poetry]
name = "rlad-bst"
version = "0.1.0"
description = ""
authors = ["Ennio Strohauer <ennio.strohauer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12, !=3.12.5"
gymnasium = "^1.0.0"
numpy = "^2.1.3"
stable-baselines3 = "^2.4.0"
tqdm = "^4.67.1"
rich = "^13.9.4"
wandb = "^0.19.1"
tensorboard = "^2.18.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
pre-commit = "^4.0.1"
flake8 = "^7.1.1"
debugpy = "^1.8.9"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py312']

[tool.isort]
profile = "black"
skip_gitignore = true
line_length = 79
known_third_party = "wandb"
